# Gamma-linux

./: CONTRIBUTE.md  README.md
.github/workflows/: System-tour.yml  Uni-build.yml  build-for-hp.yml  build.yml  cheick.yml  gamma-store.yml  store-demo.yml  system-tour.yml
scripts/: 01-prepare.sh  02-install-packages.sh  03-install-gamma.sh  04-configure.sh  05-build-squashfs.sh  06-build-efi.sh  07-build-iso.sh  08-test.sh  prepare.sh
src/gamma-cc/: CMakeLists.txt  main.c
src/gamma-ios-theme/: gamma-ios.edc  theme.desktop
